samples/_failures_safe/1761542047_a6832f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a76441f1.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_a76441f1.c:172:16: error: expected ‘;’ at end of input
  172 |     lexer.input
      |                ^
      |                ;
./samples/SAFE/__tmp_a76441f1.c:172:5: error: expected declaration or statement at end of input
  172 |     lexer.input
      |     ^~~~~
